<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">OVSR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_image">Click to choose an image</string>
    <string name="content_desc">Image not found</string>
    <string name="History">History</string>
    <string name="title_activity_display_message_activty">History</string>
    <string name="Home">Home</string>
    <string name="Delete">Delete File</string>
    <string name="SaveF">Save To File</string>
    <string name="Template">Template</string>
    <string name="File">File</string>
    <string name="LoadF">Load From File</string>
    <string name="FTP">FTP</string>
    <string name="title_activity_activity_test">ActivityTestActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_ftp">FTP</string>
    <string name="Select_Camera">Select Camera</string>
    <string name="Select_Video">Select Video</string>
    <string name="Select_Picture">Select Image</string>
    <string name="Save_Picture">Save Image</string>
    <string name="network_status">Network status</string>
    <string name="OVSR_Server">OVSR server location</string>
    <string name="OVSR_Server_Port">OVSR server port number</string>
    <string name="defaultIP">"192.168.1.3"</string>
    <string name="defaultPORT">"64000"</string>
    
    
</resources>
