<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/Settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/History"
          android:title="@string/History" />
    <item android:id="@+id/File"
          android:title="@string/File" >
        <menu>
          <item android:id="@+id/SaveF"
          android:title="@string/SaveF" >
          </item> 
          <item android:id="@+id/LoadF"
          android:title="@string/LoadF" > 
          </item>
        </menu>
    </item>
    
    <item android:id="@+id/Template"
          android:title="@string/Template" />
    
        <item android:id="@+id/Camera"
          android:icon="@drawable/ic_action_camera"
          android:title="@string/Select_Camera"
          android:showAsAction="always"/>
        <item android:id="@+id/Video"
          android:icon="@drawable/ic_action_video"
          android:title="@string/Select_Video"
          android:showAsAction="always"/>
        <item android:id="@+id/Picture"
          android:icon="@drawable/ic_action_picture"
          android:title="@string/Select_Picture"
          android:showAsAction="always"/>        
</menu>
